--- a/JedenSvet/nbproject/project.properties
+++ b/JedenSvet/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/JedenSvet.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-5.1.46-bin.jar=C:\\Users\\Student\\Downloads\\mysql-connector-java-5.1.46\\mysql-connector-java-5.1.46\\mysql-connector-java-5.1.46-bin.jar
+file.reference.mysql-connector-java-5.1.46.jar=C:\\Users\\ShangTzu\\Desktop\\mysql-connector-java-5.1.46\\mysql-connector-java-5.1.46.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.46-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.46-bin.jar}:\
+    ${file.reference.mysql-connector-java-5.1.46.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
