--- a/JedenSvet/nbproject/project.properties
+++ b/JedenSvet/nbproject/project.properties
@@ -29,13 +29,11 @@ dist.jar=${dist.dir}/JedenSvet.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.46-bin.jar-1=C:\\Users\\ShangTzu\\Desktop\\mysql-connector-java-5.1.46\\mysql-connector-java-5.1.46-bin.jar
-file.reference.mysql-connector-java-5.1.46.jar=C:\\Users\\ShangTzu\\Desktop\\mysql-connector-java-5.1.46\\mysql-connector-java-5.1.46.jar
+file.reference.mysql-connector-java-5.1.46-bin.jar=C:\\Users\\Student\\Downloads\\mysql-connector-java-5.1.46\\mysql-connector-java-5.1.46\\mysql-connector-java-5.1.46-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.46.jar}:\
-    ${file.reference.mysql-connector-java-5.1.46-bin.jar-1}
+    ${file.reference.mysql-connector-java-5.1.46-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
